# schedule-genius

./: .gitignore  CMakeLists.txt  README.md  Schedule-Genius.sln  Schedule-Genius.vcxproj  Schedule-Genius.vcxproj.filters  build.sh  eleve.csv  example.csv  example.txt  matiere_spe.txt  nom.txt  prenom.txt  test.txt  vincentest.cpp
doc/: README.md  Schedule Genius.canvas  database.canvas  database.md
src/: main.cpp
src/lib/: eleve.csv  eleves.cpp  eleves.h  eleves.hpp  fichier.cpp  fichier.h  fichier.hpp  generateur_csv.cpp  generateur_csv.h  generateur_csv.hpp  generateur_csv.py  generation_groupes.cpp  generation_groupes.h  generation_groupes.hpp  groupes.cpp  groupes.hpp  import.cpp  import.h  import.hpp  tab_dyn.cpp  tab_dyn.hpp  tab_dyn_int.cpp  tab_dyn_string.cpp  tableau_dynamique.cpp  tableau_dynamique.hpp
src/lib/change_occ/: cd.py  change_header.py  change_header_double.py  change_occ.csv  change_occ.py  change_occ_old.py  help  load.py  main.py  tab_dyn.h  terminal  terminal.py  tools.py
src/lib/change_occ/load_file/: comparaison  dict_dyn_basic  dict_dyn_class  tab_dyn_basic  tab_dyn_class
src/lib/character/: eleves.cpp  eleves.h  groupes.cpp  groupes.h  matieres.cpp  matieres.h  matieres_temp.cpp  matieres_temp.h  prof.cpp  prof.h  profs.cpp  profs.h  salles.cpp  salles.h
src/lib/database/: database.cpp  database.h
src/lib/dict_dyn/: dict_dyb_int_unsigned_float.cpp  dict_dyn  dict_dyn.cpp  dict_dyn.h  dict_dyn.hpp  dict_dyn_char_double.cpp  dict_dyn_char_int.cpp  dict_dyn_int_unsigned_eleves.cpp  dict_dyn_int_unsigned_string.cpp
src/lib/outil/: comparaison.cpp  comparaison.h
src/lib/tab_dyn/: tab_dyn.cpp  tab_dyn.h  tab_dyn.hpp  tab_dyn_char.cpp  tab_dyn_double.cpp  tab_dyn_eleve.cpp  tab_dyn_eleves.cpp  tab_dyn_float.cpp  tab_dyn_groupes.cpp  tab_dyn_int.cpp  tab_dyn_int_unsigned.cpp  tab_dyn_matieres.cpp  tab_dyn_matieres_temp.cpp  tab_dyn_profs.cpp  tab_dyn_salles.cpp  tab_dyn_string.cpp
src/tutos/: README.md
src/tutos/gii33/: gii33.cpp  gii33.h
src/tutos/pgii33/: pgii33.cpp  pgii33.h  pgii33.hpp
src/tutos/untypequicode/: player.cpp  player.h  player.hpp  untypequicode.cpp  untypequicode.h  untypequicode.hpp
src/tutos/vincentcestmoi/: vincentcestmoi.cpp  vincentcestmoi.h  vincentcestmoi.hpp
